hphp/test/zend/bad/ext/reflection/tests/ReflectionObject_isSubclassOf_error.php.expectf

Warning: %s
NULL

Warning: %s
NULL

Fatal error: %s
Stack trace:
#0 %s(7): ReflectionClass->isSubclassOf('X')
#1 {main}
  thrown in %s on line 7